# zfile

./: .envrc  LICENSE  README.md  logging_config.yaml  pyproject.toml  requirements.txt  vercel.json
tests/: test_links.py
zfile/: __init__.py  __main__.py  fapi.py
zfile/static/: index.html
